--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,48 +11,12 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/tab_pager"
             android:layout_width="match_parent"
-            android:layout_height="100dp"/>
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0.5dp" />
-        <Button
-            android:id="@+id/btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/main_tv1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colorPrimary" />
-
-            <TextView
-                android:id="@+id/main_tv2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:clickable="true" />
-
-            <TextView
-                android:id="@+id/main_tv3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:clickable="true" />
-
-            <TextView
-                android:id="@+id/main_tv4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:clickable="true" />
-        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -71,7 +35,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimary"
                     app:tabIconNormal="@mipmap/ic_launcher"
                     app:tabIconSelected="@mipmap/ic_launcher_round"
                     app:tabText="首页"
@@ -88,8 +51,7 @@
                     app:tabIconSelected="@mipmap/ic_launcher_round"
                     app:tabText="游戏"
                     app:tabTextSize="10sp"
-                    app:textColorNormal="@color/bottom_bg"
-                    app:textColorSelected="@color/colorPrimary" />
+                    app:textColorNormal="@color/bottom_bg" />
 
                 <com.yinglan.alphatabs.AlphaTabView
                     android:layout_width="0dp"
