--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="bottom_bg">#A0A0A1</color>
     <color name="line_bg">#E8E8E9</color>
+    <color name="lab_col">#3C3C3C</color>
     <color name="black">#000</color>
 </resources>
