--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,8 +35,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    app:tabIconNormal="@mipmap/ic_launcher"
-                    app:tabIconSelected="@mipmap/ic_launcher_round"
+                    app:tabIconNormal="@mipmap/main"
+                    app:tabIconSelected="@mipmap/main"
                     app:tabText="首页"
                     app:tabTextSize="10sp"
                     app:textColorNormal="@color/bottom_bg"
@@ -47,8 +47,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="2dp"
-                    app:tabIconNormal="@mipmap/ic_launcher"
-                    app:tabIconSelected="@mipmap/ic_launcher_round"
+                    app:tabIconNormal="@mipmap/yx"
+                    app:tabIconSelected="@mipmap/yx"
                     app:tabText="游戏"
                     app:tabTextSize="10sp"
                     app:textColorNormal="@color/bottom_bg" />
@@ -58,8 +58,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="2dp"
-                    app:tabIconNormal="@mipmap/ic_launcher"
-                    app:tabIconSelected="@mipmap/ic_launcher_round"
+                    app:tabIconNormal="@mipmap/zj"
+                    app:tabIconSelected="@mipmap/zj"
                     app:tabText="资金"
                     app:tabTextSize="10sp"
                     app:textColorNormal="@color/bottom_bg"
@@ -70,8 +70,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:padding="2dp"
-                    app:tabIconNormal="@mipmap/ic_launcher"
-                    app:tabIconSelected="@mipmap/ic_launcher_round"
+                    app:tabIconNormal="@mipmap/icon_user"
+                    app:tabIconSelected="@mipmap/icon_user"
                     app:tabText="我的"
                     app:tabTextSize="10sp"
                     app:textColorNormal="@color/bottom_bg"
