--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#167DAB</color>
+    <color name="colorPrimary">#136B93</color>
     <color name="colorPrimaryDark">#167DAB</color>
+    <color name="blue">#5FADCA</color>
     <color name="colorAccent">#FF4081</color>
     <color name="bottom_bg">#A0A0A1</color>
     <color name="line_bg">#E8E8E9</color>
     <color name="lab_col">#3C3C3C</color>
     <color name="black">#000</color>
     <color name="dihui">#EFF0F0</color>
+    <color name="mihuang">#FFC680</color>
 </resources>
