--- a/app/src/main/res/layout/activity_change_pwd.xml
+++ b/app/src/main/res/layout/activity_change_pwd.xml
@@ -1,57 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="gy.lotteryticket.ui.user.ChangePwdActivity">
-    <net.tsz.afinal.view.TitleBar
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:center_tv="登录密码"
-        app:left_iv="@mipmap/left_jian" />
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dihui"
         android:orientation="vertical">
-        <EditText
-            android:layout_margin="10dp"
+
+        <net.tsz.afinal.view.TitleBar
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="请输入旧密码"
-            android:inputType="textPassword"
-           android:padding="10dp"
-            android:background="@drawable/edit_bg"
-            android:textSize="15sp" />
-        <EditText
-            android:layout_margin="10dp"
+            android:background="@color/colorPrimary"
+            app:center_tv="登录密码"
+            app:left_iv="@mipmap/left_jian" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请输入新密码"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:background="@drawable/edit_bg"
-            android:textSize="15sp" />
-        <EditText
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请再次输入新密码"
-            android:inputType="textPassword"
-            android:background="@drawable/edit_bg"
-            android:padding="10dp"
-            android:textSize="15sp" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:textColor="@color/white"
-            android:text="确认修改"
-            android:layout_margin="10dp"
-            android:background="@drawable/btn_bg_selector"/>
+            android:layout_height="match_parent"
+            android:background="@color/dihui"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/old_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_bg"
+                android:hint="请输入旧密码"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/new_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_bg"
+                android:hint="请输入新密码"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/new_again_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_bg"
+                android:hint="请再次输入新密码"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn_bg_selector"
+                android:text="确认修改"
+                android:textColor="@color/white" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
