--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,6 +78,8 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             style="@style/main_item_iv"
                             android:src="@mipmap/ic_launcher" />
 
@@ -104,6 +106,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@mipmap/ic_launcher" />
 
                         <TextView
@@ -129,6 +133,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@mipmap/ic_launcher" />
 
                         <TextView
@@ -162,6 +168,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@mipmap/ic_launcher" />
 
                         <TextView
@@ -187,6 +195,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@mipmap/ic_launcher" />
 
                         <TextView
@@ -212,6 +222,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:src="@mipmap/ic_launcher" />
 
                         <TextView
