--- a/app/src/main/res/layout/frag_main.xml
+++ b/app/src/main/res/layout/frag_main.xml
@@ -74,6 +74,8 @@
 
                     <ImageView
                         style="@style/main_item_iv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
@@ -99,6 +101,8 @@
 
                     <ImageView
                         style="@style/main_item_iv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
@@ -124,6 +128,8 @@
 
                     <ImageView
                         style="@style/main_item_iv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
@@ -157,6 +163,8 @@
 
                     <ImageView
                         style="@style/main_item_iv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
@@ -182,6 +190,8 @@
 
                     <ImageView
                         style="@style/main_item_iv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
@@ -207,6 +217,8 @@
 
                     <ImageView
                         style="@style/main_item_iv"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:src="@mipmap/ic_launcher" />
 
                     <TextView
